Update project two description. Fix incorrect width set on instagrame iframe which caused x-overflow by a couple of pixels (and added an x-scrollbar on mobile devices.

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -426,7 +426,6 @@ Photo Carousel Styling
 
 iframe.instagram-media {
   max-width: 800px !important;
-  width: 100% !important;
   min-width: auto !important;
 }
 
